--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="panel panel-default">
               <div class="panel-heading">Filter Search</div>
               <div class="panel-body">
-                <form id=form2>
+                <form id="form2">
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
@@ -40,6 +40,10 @@
                         <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
                       </li>
                     </ul>
+                   <select id="Sdropdown">
+                     <option value="circle">circle</option>
+                     <option value="option">sphere</option>
+                   </select>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
                 </form>
