--- a/index.html
+++ b/index.html
@@ -39,10 +39,37 @@
                         <label for="date">Enter a Date</label>
                         <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
                       </li>
+                      <li class="filter list-group-item">
+                        <label for="city">Enter a City</label>
+                        <input class="form-control" id="ufocity" type="text" placeholder="mason">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="state">Enter a State ID</label>
+                        <input class="form-control" id="stateid" type="text" placeholder="nc">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="country">Enter a Country ID</label>
+                        <input class="form-control" id="countryid" type="text" placeholder="us">
+                      </li>
                     </ul>
                    <select id="Sdropdown">
+                     <option value="option">shape</option>
+                     <option value="changing">changing</option>
+                     <option value="chevron">chevron</option>
+                     <option value="cigar">cigar</option>
                      <option value="circle">circle</option>
-                     <option value="option">sphere</option>
+                     <option value="cross">cross</option>
+                     <option value="cylinder">cylinder</option>
+                     <option value="disk">disk</option>
+                     <option value="fireball">fireball</option>
+                     <option value="flash">flash</option>
+                     <option value="formation">formation</option>
+                     <option value="light">light</option>
+                     <option value="other">other</option>
+                     <option value="oval">oval</option>
+                     <option value="rectangle">rectangle</option>
+                     <option value="sphere">sphere</option>
+                     <option value="unknown">unknown</option>
                    </select>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
