--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                      <option value="oval">oval</option>
                      <option value="rectangle">rectangle</option>
                      <option value="sphere">sphere</option>
+                     <option value="triangle">triangle</option>
                      <option value="unknown">unknown</option>
                    </select>
                   </div>
